# SIMS

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MIGRATION.md  Makefile  README.md  SIMS_tutorial.ipynb  licenses.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
for_paper/: code_ex.py  feature_masks.py  visualizations_for_paper.py
model_zoo/: ablation_model.py  benchmark_human_model.py  benchmark_mouse_model.py  bhaduri_cortical_model.py  cortical_model.py  dental_model.py  human_cortical_model.py  mostajo_mouse_model.py  mouse_cortical_model.py  mouse_model.py  pancreas_model.py  retina_model.py  subset_cortical_model.py
notebooks/: Cortical_model_01.ipynb  Intersection_test.ipynb  Mouse_model_01.ipynb  Retina_model_test.ipynb  Untitled.ipynb  annotation_visualization.ipynb  benchmark_dataset_setup.ipynb  benchmark_human_modeling_01.ipynb  benchmark_mouse_modeling_01.ipynb  bhaduri_cortical_model_01.ipynb  cluster_annotation.ipynb  cortex_development_model.ipynb  custom_model_metrics.ipynb  data_cleaning_checks.ipynb  data_modeling_01.ipynb  data_modeling_02.ipynb  dataset_creation.ipynb  dental_model_01.ipynb  developing_mouse_brain_model.ipynb  external_data_exploration_01.ipynb  model_cleaning_01.ipynb  model_test.ipynb  modeling_sanity_check.ipynb  mostajo_model_01.ipynb  mouse_data_exploration.ipynb  pacreas_model_test.ipynb  pancreas_model_test.ipynb  paper_visualizations.ipynb  pca_data_visualization_01.ipynb  pca_reduction_01.ipynb  presentation_examples.ipynb  primary_tissue_model.ipynb  reduced_data_clustering_01.ipynb  reduced_data_clustering_02.ipynb  rowwise_data_cleaning_01.ipynb  sample_weights_calculation.ipynb  scVI_benchmark_01.ipynb  scanpy_test.ipynb  tabnet_test.ipynb  transposed_data_exploration_01.ipynb  (+3 more)
scsims/: __init__.py  autoencoder.py  data.py  downloaders.py  inference.py  lightning_train.py  model.py  networking.py  pretraining.py  scvi_api.py  tabnet.py  temperature_scaling.py  testing.py  tests.py
(+34 files in other folders)
